crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__super__super_in_top_level_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_in_top_level_function.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t use `super` outside of class.
   ╭─[craftinginterpreters/test/super/super_in_top_level_function.lox:1:3]
   │
 1 │   super.bar(); // Error at 'super': Can't use 'super' outside of a class.
   │   ─────  
───╯
