crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__super__super_without_dot.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_without_dot.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `;`: expected Dot
   ╭─[craftinginterpreters/test/super/super_without_dot.lox:6:10]
   │
 6 │     super;
   │          ─  
   │              
───╯
